added multi-language support

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
 name: Zhe Cai
-bio: Be a person and respects others as persons
+bio: A man who is chasing dreams
 
 # twitter summary info
 description: A blog about technology and stuff related
@@ -53,18 +53,19 @@ github: czahie
 email: czahie1996@gmail.com
 
 authors:
-  johndoe:
-    name: John Doe
-    bio: A Man who travels the world eating noodles
+  # johndoe:
+  #   name: John Doe
+  #   bio: A Man who travels the world eating noodles
+  #   external-image: false
+  #   picture: assets/images/profile.jpg
+  #   twitter: johndoe
+  joe:
+    name: Zhe Cai
+    bio: A man who is chasing dreams
     external-image: false
     picture: assets/images/profile.jpg
-    twitter: johndoe
-  jamesfoster:
-    name: James Foster
-    bio: A Man who develops software with coffee
-    external-image: false
-    picture: assets/images/james.jpg
-    twitter: jamesfoster
+    # twitter: jamesfoster
+    
 
 # do you want a larger site? change the option below
 # options: [normal, large] | default: normal
