--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,6 @@
 # main text of home
-name: 
-  English: Zhe Cai
-  中文: 蔡喆
-bio: 
-  English: A man who is chasing dreams
-  中文: 不畏浮云遮望眼
+name: Zhe Cai
+bio: A man who is chasing dreams
 
 # twitter summary info
 description: A blog about technology and stuff related
@@ -112,12 +108,16 @@ animation: true
 # multi-language support
 lang:
   English:
+    name: "Zhe Cai"
+    bio: "A man who is chasing dreams"
     home: "Home"
     blog: "Blog"
     projects: "Projects"
     about: "About"
     resume: "Résumé"
   中文:
+    name: "蔡喆"
+    bio: 不畏浮云遮望眼
     home:  "首页"
     blog: "博客"
     projects: "项目"
